--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "react-toastify": "7.0.3",
     "reactstrap": "8.6.0",
     "read-excel-file": "^5.1.0",
+    "realm-web": "^1.2.1",
     "recharts": "2.0.4",
     "redux": "4.0.5",
     "redux-debounced": "0.5.0",
