--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@fullcalendar/timegrid": "5.3.0",
     "@fullcalendar/timeline": "5.3.0",
     "@hookform/resolvers": "1.3.4",
+    "@stripe/react-stripe-js": "^1.4.1",
+    "@stripe/stripe-js": "^1.15.0",
     "@uppy/react": "1.10.8",
     "animate.css": "4.1.1",
     "apexcharts": "3.23.0",
@@ -86,6 +88,7 @@
     "sass": "1.26.8",
     "screenfull": "5.0.2",
     "sortablejs": "1.12.0",
+    "stripe": "^8.151.0",
     "styled-components": "5.1.1",
     "sweetalert2": "10.14.0",
     "sweetalert2-react-content": "3.0.1",
