--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-select": "4.0.2",
     "react-shepherd": "3.3.0",
     "react-slidedown": "2.4.5",
+    "react-smooth-dnd": "^0.11.1",
     "react-sortablejs": "6.0.0",
     "react-toastify": "7.0.3",
     "reactstrap": "8.6.0",
@@ -117,6 +118,7 @@
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-react": "^7.20.6",
     "node-sass": "^4.13.1",
+    "prettier": "^2.3.1",
     "react-app-rewire-aliases": "^0.2.0",
     "react-app-rewire-postcss": "^3.0.2",
     "react-app-rewire-sass-rule": "^2.1.1",
