--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fullcalendar/timegrid": "5.3.0",
     "@fullcalendar/timeline": "5.3.0",
     "@hookform/resolvers": "1.3.4",
+    "@lourenci/react-kanban": "^2.1.0",
     "@stripe/react-stripe-js": "^1.4.1",
     "@stripe/stripe-js": "^1.15.0",
     "@uppy/react": "1.10.8",
