--- a/package.json
+++ b/package.json
@@ -20,12 +20,10 @@
     "@uppy/react": "1.10.8",
     "animate.css": "4.1.1",
     "apexcharts": "3.23.0",
+    "apollo-link": "^1.2.14",
     "apollo-link-http": "^1.5.17",
+    "apollo-link-logger": "^2.0.0",
     "availity-reactstrap-validation-safe": "2.6.1",
-    "aws-amplify": "^3.3.26",
-    "aws-appsync": "^3.0.1",
-    "aws-appsync-auth-link": "^3.0.2",
-    "aws-appsync-react": "^3.0.1",
     "axios": "0.21.1",
     "axios-mock-adapter": "1.19.0",
     "babel-plugin-react-intl": "5.1.18",
@@ -82,7 +80,7 @@
     "react-toastify": "7.0.3",
     "reactstrap": "8.6.0",
     "read-excel-file": "^5.1.0",
-    "realm-web": "^1.2.1",
+    "realm-web": "^1.3.0",
     "recharts": "2.0.4",
     "redux": "4.0.5",
     "redux-debounced": "0.5.0",
@@ -96,6 +94,7 @@
     "sweetalert2-react-content": "3.0.1",
     "swiper": "6.0.4",
     "uppy": "1.21.2",
+    "uuid": "^8.3.2",
     "webpack": "4.43.0",
     "wnumb": "1.2.0",
     "xlsx": "0.16.2",
