--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "react-apexcharts": "1.3.6",
     "react-chartjs-2": "2.9.0",
     "react-contexify": "5.0.0",
-    "react-copy-to-clipboard": "5.0.2",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-country-flag": "2.0.1",
     "react-data-table-component": "6.11.2",
     "react-dom": "17.0.1",
