--- a/package.json
+++ b/package.json
@@ -11,6 +11,17 @@
     "@fullcalendar/interaction": "5.3.0",
     "@fullcalendar/list": "5.3.0",
     "@fullcalendar/react": "5.3.0",
+    "@twilio-paste/core": "10.4.0",
+    "@twilio-paste/icons": "5.3.1",
+    "@types/file-saver": "2.0.3",
+    "@types/react": "17.0.0",
+    "@types/react-dom": "17.0.0",
+    "twilio": "^3.52.0",
+    "@types/react-redux": "7.1.16",
+    "@types/redux-thunk": "2.1.0",
+    "dotenv": "10.0.0",
+    "lodash": "4.17.21",
+    "react-infinite-scroll-component": "6.1.0",
     "@fullcalendar/timegrid": "5.3.0",
     "@fullcalendar/timeline": "5.3.0",
     "@hookform/resolvers": "1.3.4",
