--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@fullcalendar/react": "5.3.0",
     "@fullcalendar/timegrid": "5.3.0",
     "@fullcalendar/timeline": "5.3.0",
+    "@inovua/reactdatagrid-enterprise": "^4.5.7",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "@hookform/resolvers": "1.3.4",
     "@lourenci/react-kanban": "2.1.0",
     "@stripe/react-stripe-js": "1.4.1",
