--- a/package.json
+++ b/package.json
@@ -11,24 +11,20 @@
     "@fullcalendar/interaction": "5.3.0",
     "@fullcalendar/list": "5.3.0",
     "@fullcalendar/react": "5.3.0",
-    "@twilio-paste/core": "10.4.0",
-    "@twilio-paste/icons": "5.3.1",
-    "@types/file-saver": "2.0.3",
-    "@types/react": "17.0.0",
-    "@types/react-dom": "17.0.0",
-    "twilio": "^3.52.0",
-    "@types/react-redux": "7.1.16",
-    "@types/redux-thunk": "2.1.0",
-    "dotenv": "10.0.0",
-    "lodash": "4.17.21",
-    "react-infinite-scroll-component": "6.1.0",
     "@fullcalendar/timegrid": "5.3.0",
     "@fullcalendar/timeline": "5.3.0",
     "@hookform/resolvers": "1.3.4",
     "@lourenci/react-kanban": "2.1.0",
     "@stripe/react-stripe-js": "1.4.1",
     "@stripe/stripe-js": "1.15.0",
+    "@twilio-paste/core": "10.4.0",
+    "@twilio-paste/icons": "5.3.1",
     "@twilio/conversations": "2.0.0",
+    "@types/file-saver": "2.0.3",
+    "@types/react": "17.0.0",
+    "@types/react-dom": "17.0.0",
+    "@types/react-redux": "7.1.16",
+    "@types/redux-thunk": "2.1.0",
     "@uppy/react": "1.10.8",
     "animate.css": "4.1.1",
     "apexcharts": "3.23.0",
@@ -45,6 +41,7 @@
     "chroma-js": "2.1.0",
     "classnames": "2.2.6",
     "cleave.js": "1.6.0",
+    "dotenv": "10.0.0",
     "draft-js": "0.11.7",
     "draftjs-to-html": "0.9.1",
     "file-saver": "2.0.2",
@@ -56,6 +53,7 @@
     "jquery": "3.5.1",
     "jsonwebtoken": "8.5.1",
     "leaflet": "1.6.0",
+    "lodash": "4.17.21",
     "moment": "2.29.1",
     "nouislider": "14.6.2",
     "nouislider-react": "3.3.8",
@@ -74,6 +72,8 @@
     "react-feather": "2.0.3",
     "react-flatpickr": "3.9.1",
     "react-hook-form": "6.15.1",
+    "react-icons": "4.3.1",
+    "react-infinite-scroll-component": "6.1.0",
     "react-intl": "3.11.0",
     "react-leaflet": "3.1.0",
     "react-paginate": "7.0.0",
@@ -105,6 +105,7 @@
     "sweetalert2": "10.14.0",
     "sweetalert2-react-content": "3.0.1",
     "swiper": "6.0.4",
+    "twilio": "3.52.0",
     "uppy": "1.21.2",
     "uuid": "8.3.2",
     "webpack": "4.43.0",
