--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "@fullcalendar/react": "5.3.0",
     "@fullcalendar/timegrid": "5.3.0",
     "@fullcalendar/timeline": "5.3.0",
-    "@inovua/reactdatagrid-enterprise": "^4.5.7",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
     "@hookform/resolvers": "1.3.4",
+    "@inovua/reactdatagrid-enterprise": "^4.5.7",
     "@lourenci/react-kanban": "2.1.0",
     "@stripe/react-stripe-js": "1.4.1",
     "@stripe/stripe-js": "1.15.0",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "@uppy/react": "1.10.8",
     "animate.css": "4.1.1",
     "apexcharts": "3.23.0",
@@ -49,6 +49,7 @@
     "jsonwebtoken": "8.5.1",
     "leaflet": "1.6.0",
     "moment": "2.29.1",
+    "moment-timezone": "^0.5.34",
     "nouislider": "14.6.2",
     "nouislider-react": "3.3.8",
     "postcss-rtl": "1.5.0",
