--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "@iconify/react": "^3.1.4",
     "@types/sortablejs": "1.10.6",
     "eslint": "7.8.0",
     "eslint-plugin-import": "2.22.0",
