--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "@fullcalendar/react": "5.3.0",
     "@fullcalendar/timegrid": "5.3.0",
     "@fullcalendar/timeline": "5.3.0",
-    "@inovua/reactdatagrid-enterprise": "4.5.7",
-    "@testing-library/jest-dom": "5.16.1",
-    "@testing-library/react": "12.1.2",
-    "@testing-library/user-event": "13.5.0",
     "@hookform/resolvers": "1.3.4",
+    "@inovua/reactdatagrid-enterprise": "4.5.7",
     "@lourenci/react-kanban": "2.1.0",
     "@stripe/react-stripe-js": "1.4.1",
     "@stripe/stripe-js": "1.15.0",
+    "@testing-library/jest-dom": "5.16.1",
+    "@testing-library/react": "12.1.2",
+    "@testing-library/user-event": "13.5.0",
     "@twilio-paste/core": "10.4.0",
     "@twilio-paste/icons": "5.3.1",
     "@twilio/conversations": "2.0.1",
@@ -66,6 +66,7 @@
     "postcss-rtl": "1.5.0",
     "prismjs": "1.19.0",
     "prop-types": "15.7.2",
+    "query-string": "^7.1.1",
     "react": "17.0.1",
     "react-apexcharts": "1.3.6",
     "react-chartjs-2": "2.9.0",
