--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@testing-library/jest-dom": "5.16.1",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
+    "@twilio-paste/badge": "^5.0.1",
     "@twilio-paste/core": "10.4.0",
     "@twilio-paste/icons": "5.3.1",
     "@twilio/conversations": "2.0.1",
