--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "react-rating": "2.0.5",
     "react-redux": "7.2.2",
     "react-router-dom": "5.2.0",
-    "react-scripts": "^4.0.2"
+    "react-scripts": "^4.0.2",
     "react-scroll-up": "1.3.7",
     "react-select": "4.0.2",
     "react-shepherd": "3.3.0",
