--- a/package.json
+++ b/package.json
@@ -1,151 +1,136 @@
 {
-  "name": "vuexy-react-admin-dashboard",
+  "name": "team-class-partners",
   "version": "6.4.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "3.3.16",
-    "@casl/ability": "5.2.2",
-    "@casl/react": "2.1.1",
-    "@fullcalendar/core": "5.3.0",
-    "@fullcalendar/daygrid": "5.3.0",
-    "@fullcalendar/interaction": "5.3.0",
-    "@fullcalendar/list": "5.3.0",
-    "@fullcalendar/react": "5.3.0",
-    "@fullcalendar/timegrid": "5.3.0",
-    "@fullcalendar/timeline": "5.3.0",
-    "@hookform/resolvers": "1.3.4",
-    "@inovua/reactdatagrid-enterprise": "4.5.7",
-    "@lourenci/react-kanban": "2.1.0",
-    "@stripe/react-stripe-js": "1.4.1",
-    "@stripe/stripe-js": "1.15.0",
-    "@testing-library/jest-dom": "5.16.1",
-    "@testing-library/react": "12.1.2",
-    "@testing-library/user-event": "13.5.0",
-    "@twilio-paste/badge": "^5.0.1",
-    "@twilio-paste/core": "10.4.0",
-    "@twilio-paste/icons": "5.3.1",
-    "@twilio/conversations": "2.0.1",
-    "@types/file-saver": "2.0.3",
-    "@types/react": "17.0.0",
-    "@types/react-dom": "17.0.0",
-    "@types/react-redux": "7.1.16",
-    "@types/redux-thunk": "2.1.0",
-    "@uppy/react": "1.10.8",
-    "animate.css": "4.1.1",
-    "apexcharts": "3.23.0",
+    "@apollo/client": "3.8.4",
+    "@casl/ability": "^6.0.0",
+    "@casl/react": "3.1.0",
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "11.11.0",
+    "@fluentui/react-icons": "2.0.218",
+    "@fortawesome/fontawesome-svg-core": "6.4.2",
+    "@fortawesome/free-solid-svg-icons": "6.4.2",
+    "@fortawesome/react-fontawesome": "0.2.0",
+    "@fullcalendar/core": "6.1.9",
+    "@fullcalendar/daygrid": "6.1.9",
+    "@fullcalendar/interaction": "6.1.9",
+    "@fullcalendar/list": "6.1.9",
+    "@fullcalendar/react": "6.1.9",
+    "@fullcalendar/timegrid": "6.1.9",
+    "@iconify/react": "4.1.1",
+    "@inovua/reactdatagrid-enterprise": "5.10.2",
+    "@lourenci/react-kanban": "^2.1.0",
+    "@mui/material": "5.14.12",
+    "@twilio-paste/badge": "^8.1.0",
+    "@twilio-paste/core": "^20.4.0",
+    "@twilio-paste/icons": "^12.2.0",
+    "@twilio/conversations": "^2.4.1",
+    "@types/file-saver": "2.0.5",
+    "@types/redux-thunk": "2.1.32",
+    "@uppy/react": "3.1.3",
+    "animate.css": "^4.1.1",
     "apollo-link": "1.2.14",
-    "apollo-link-http": "1.5.17",
-    "apollo-link-logger": "2.0.0",
-    "availity-reactstrap-validation-safe": "2.6.1",
-    "axios": "0.21.1",
-    "axios-mock-adapter": "1.19.0",
+    "axios": "1.5.1",
+    "axios-mock-adapter": "^1.22.0",
     "babel-plugin-react-intl": "5.1.18",
     "bootstrap": "4.5.2",
     "bs-stepper": "1.7.0",
-    "chart.js": "2.9.4",
-    "chroma-js": "2.1.0",
-    "classnames": "2.2.6",
-    "cleave.js": "1.6.0",
-    "dotenv": "10.0.0",
+    "classnames": "2.3.2",
+    "cleave.js": "^1.6.0",
+    "dom7": "4.0.6",
+    "draft-convert": "2.1.13",
     "draft-js": "0.11.7",
-    "draftjs-to-html": "0.9.1",
-    "file-saver": "2.0.2",
-    "flatpickr": "4.6.3",
-    "graphql": "15.5.0",
-    "history": "5.0.0",
-    "html-to-draftjs": "1.5.0",
-    "intl-messageformat": "7.8.4",
-    "jquery": "3.5.1",
-    "jsonwebtoken": "8.5.1",
-    "leaflet": "1.6.0",
-    "lodash": "4.17.21",
-    "moment": "2.29.1",
-    "moment-timezone": "^0.5.43",
-    "nouislider": "14.6.2",
-    "nouislider-react": "3.3.8",
-    "postcss-rtl": "1.5.0",
-    "prismjs": "1.19.0",
-    "prop-types": "15.7.2",
-    "query-string": "^7.1.1",
-    "react": "17.0.1",
-    "react-apexcharts": "1.3.6",
-    "react-chartjs-2": "2.9.0",
-    "react-contexify": "5.0.0",
-    "react-copy-to-clipboard": "5.0.2",
-    "react-country-flag": "2.0.1",
-    "react-data-table-component": "6.11.2",
-    "react-dom": "17.0.1",
-    "react-draft-wysiwyg": "1.14.5",
-    "react-feather": "2.0.3",
-    "react-flatpickr": "3.9.1",
-    "react-hook-form": "6.15.1",
-    "react-icons": "4.3.1",
-    "react-infinite-scroll-component": "6.1.0",
-    "react-intl": "3.11.0",
-    "react-leaflet": "3.1.0",
-    "react-paginate": "7.0.0",
-    "react-perfect-scrollbar": "1.5.5",
-    "react-player": "2.6.2",
-    "react-rating": "2.0.5",
-    "react-redux": "7.2.2",
+    "file-saver": "2.0.5",
+    "flatpickr": "4.6.13",
+    "graphql": "^15.0.0",
+    "history": "5.3.0",
+    "moment": "2.29.4",
+    "moment-timezone": "0.5.43",
+
+    "prismjs": "1.29.0",
+    "prop-types": "15.8.1",
+    "query-string": "^8.1.0",
+    "react": "^18.0.0",
+    "react-app-rewire-postcss": "^3.0.2",
+    "react-bootstrap": "^1.6.4",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-data-table-component": "^7.5.4",
+    "react-device-detect": "2.2.3",
+    "react-dom": "^18.0.0",
+    "react-draft-wysiwyg": "1.15.0",
+    "react-dropzone": "14.2.3",
+    "react-feather": "2.0.10",
+    "react-flatpickr": "3.10.13",
+    "react-full-screen": "1.1.1",
+    "react-icons": "^4.11.0",
+    "react-image-crop": "10.1.8",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-paginate": "^8.2.0",
+    "react-perfect-scrollbar": "1.5.8",
+    "react-rating": "^2.0.5",
+    "react-redux": "8.1.3",
     "react-router-dom": "5.2.0",
-    "react-scripts": "^4.0.2",
-    "react-scroll-up": "1.3.7",
-    "react-select": "4.0.2",
-    "react-shepherd": "3.3.0",
-    "react-slidedown": "2.4.5",
-    "react-smooth-dnd": "0.11.1",
-    "react-sortablejs": "6.0.0",
-    "react-toastify": "7.0.3",
+    "react-scripts": "5.0.1",
+    "react-scroll-up": "^1.4.0",
+    "react-select": "5.7.7",
+    "react-spreadsheet": "0.9.2",
+    "react-toastify": "9.1.3",
     "reactstrap": "8.9.0",
-    "read-excel-file": "5.1.0",
-    "realm-web": "1.3.0",
-    "recharts": "2.0.4",
-    "redux": "4.0.5",
+    "read-excel-file": "5.7.0",
+    "realm-web": "2.0.0",
+    "redux": "4.2.1",
     "redux-debounced": "0.5.0",
-    "redux-thunk": "2.3.0",
-    "sass": "1.26.8",
-    "screenfull": "5.0.2",
-    "sortablejs": "1.12.0",
-    "stripe": "8.151.0",
-    "styled-components": "5.1.1",
-    "sweetalert2": "10.14.0",
-    "sweetalert2-react-content": "3.0.1",
-    "swiper": "6.0.4",
-    "twilio": "3.52.0",
-    "uppy": "1.21.2",
-    "uuid": "8.3.2",
-    "validator": "^13.7.0",
-    "webpack": "4.43.0",
-    "wnumb": "1.2.0",
-    "xlsx": "0.16.2",
-    "yarn": "1.21.1",
-    "yup": "0.32.8"
+    "redux-thunk": "2.4.2",
+    "sass": "1.68.0",
+    "scheduler": "0.23.0",
+    "stripe": "13.8.0",
+    "styled-components": "^6.0.8",
+    "twilio": "^4.18.1",
+    "uppy": "3.17.0",
+    "uuid": "9.0.1",
+    "validator": "^13.11.0",
+    "xlsx": "0.18.5",
+    "yarn": "1.22.19",
+    "yup": "1.3.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject",
-    "lint": "./node_modules/.bin/eslint --ext .js src/"
+    "lint": "./node_modules/.bin/eslint --ext .js src/",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "overrides": [
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      }
+    ]
   },
   "devDependencies": {
-    "@iconify/react": "^3.1.4",
-    "@types/sortablejs": "1.10.6",
-    "eslint": "7.8.0",
-    "eslint-plugin-import": "2.22.0",
-    "eslint-plugin-react": "7.20.6",
-    "node-sass": "4.13.1",
-    "prettier": "2.3.1",
-    "react-app-rewire-aliases": "0.2.0",
-    "react-app-rewire-postcss": "3.0.2",
-    "react-app-rewire-sass-rule": "^2.2.1",
-    "react-app-rewired": "2.1.6",
-    "react-dev-utils": "11.0.4",
-    "sass-loader": "8.0.2"
+    "@iconify/react": "4.1.1",
+    "@storybook/addon-essentials": "7.4.6",
+    "@storybook/addon-links": "7.4.6",
+    "@storybook/preset-create-react-app": "7.4.6",
+    "@storybook/react": "7.4.6",
+    "babel-eslint": "^8.0.1",
+    "eslint": "8.50.0",
+    "eslint-plugin-import": "2.28.1",
+    "eslint-plugin-react": "7.33.2",
+    "eslint-plugin-storybook": "0.6.14",
+    "react-app-rewire-alias": "^1.1.7",
+    "react-app-rewired": "^2",
+    "sass-loader": "13.3.2",
+    "style-loader": "3.3.3"
   },
   "browserslist": {
     "production": [
