--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "classnames": "2.3.2",
     "cleave.js": "^1.6.0",
     "dom7": "4.0.6",
-    "draft-convert": "2.1.13",
-    "draft-js": "0.11.7",
+    "draft-convert": "2.1.11",
+    "draft-js": "^0.11.7",
     "file-saver": "2.0.5",
     "flatpickr": "4.6.13",
     "graphql": "^15.0.0",
@@ -57,7 +57,7 @@
     "react-data-table-component": "^7.5.4",
     "react-device-detect": "2.2.3",
     "react-dom": "^17.0.0",
-    "react-draft-wysiwyg": "1.15.0",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-dropzone": "14.2.3",
     "react-feather": "2.0.10",
     "react-flatpickr": "3.10.13",
