--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@fullcalendar/react": "6.1.9",
     "@fullcalendar/timegrid": "6.1.9",
     "@iconify/react": "4.1.1",
-    "@inovua/reactdatagrid-enterprise": "5.10.2",
+    "@inovua/reactdatagrid-enterprise": "^4.16.7",
     "@mui/material": "5.14.12",
     "@twilio-paste/badge": "^8.1.0",
     "@twilio-paste/core": "^20.4.0",
