--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-paginate": "^8.2.0",
     "react-perfect-scrollbar": "1.5.8",
+    "react-phone-number-input": "^3.3.7",
     "react-rating": "^2.0.5",
     "react-redux": "8.1.3",
     "react-router-dom": "5.2.0",
